# LabyrinthOS

./: .gitignore  PUSH.md  README.md  pyproject.toml  run_demo.sh  vercel.json
.github/workflows/: ci.yml
docs/: IMPLEMENTATION.md
examples/: demo.py  sample.txt  sample_maze.txt
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: MazeCanvas.tsx
frontend/src/lib/labyrinthos/: bits.ts  crypto.ts  index.ts  maze.ts  render.ts  stats.ts
frontend/src/pages/: index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: pako.d.ts
src/labyrinthos/: __init__.py  cli.py  compression.py  crypto.py  decoder.py  file_ingestion.py  maze_generator.py  maze_io.py  path_solver.py  visualizer.py
tests/: test_compression.py  test_core.py  test_extras.py  test_file_ingestion.py  test_network.py
